[package]
name = "databendingutils-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
indicatif = "0.17.8"
qmetaobject = "0.2.10"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
